# nox

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  nox.opam
src/: dune  main.ml  printer.ml  printer.mli  source.ml  source.mli
src/codegen/: lua.ml  lua.mli
src/compiler/: diagnostic.mli  driver.ml  driver.mli  environment.ml  environment.mli  printer.ml  printer.mli  source.ml  source.mli
src/eval/: interpreter.ml  interpreter.mli  values.mli
src/lowering/: ir.mli  lowerer.ml  lowerer.mli
src/syntax/: ast.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  parsetree.mli  token.mli
src/typing/: typechecker.ml  typechecker.mli  types.mli
test/: dune  interpreter.ml  lexer.ml  lowerer.ml  lua.ml  parser.ml  typechecker.ml
