(lang dune 3.7)

(name nox)

(generate_opam_files true)

(source
 (github coetaur0/nox))

(authors "Aurelien Coet")

(maintainers "Aurelien Coet")

(license MIT)

(package
 (name nox)
 (synopsis "The Nox programming language")
 (description "The Nox programming language")
 (depends ocaml dune ounit2))
